# coding_stuff

./: .browser-ops-script.js  .browser-ops-task.json  .gitignore  .temp-browser-task.md  ALL_WORK_DONE_SUMMARY.md  AUTONOMOUS_TESTING_SYSTEM_V2.md  CLAUDE.md  EUGENE_TESTS_6_50_EXECUTION_PLAN.md  FATHOM-FIX-SUMMARY.md  FATHOM-MERGE-NODE-FIX-COMPLETE.md  FATHOM_ANALYSIS_FIELDS_FIX.md  FILE_ORGANIZATION_RULES.md  MCP_CONFIGURATION_FIXES.md  MERGE_NODE_FIX_SUMMARY.md  OAUTH_REFRESH_PROTOCOL.md  PROJECT_REFERENCE.md  RE-AUTHENTICATION_ROOT_CAUSE_ANALYSIS.md  README.md  SOP-BUILDER-FIXES-COMPLETE.md  V8_TEST_RUNNER_SIMPLIFIED.md  W2_EXPENSIFY_EXTENSION_SUMMARY.md  W7_DOWNLOADS_MONITOR_TEST_REPORT.md  WORK_COMPLETED_2026-01-29.md  ambush-tv-presentation-update.json  dns-task-progress.md  eugene-5-test-manual-guide.md  eugene-test-monitor.md  eugene-test-results-6-50.md  eugene-test-run-log.md  eugene-test-runner.sh  eugene_v8_update_email_PLAIN.txt  eugene_v8_update_email_draft.md  execute_eugene_tests_6_50.py  expense-system-test-report-2026-01-30.md  extract-claude-node.sh  fathom-test-payload.json  fathom-v2-test-report-2026-01-30.md  fathom-workflow-data-flow.md  fathom-workflow-fix-complete.md  fathom-workflow-fix-report.md  (+10 more)
.archive/: google_drive_404_root_cause_analysis_v1.0_2026-01-14.md
.claude/: BASH_APPROVAL_CONTROL.md
mcp-servers/fathom-mcp/: .dockerignore  .dockerignore.container  .gitignore  Dockerfile  LICENSE  README.md  USAGE.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py
(+1400 files in other folders)
